--- a/assets/UI/mainwindow.ui
+++ b/assets/UI/mainwindow.ui
@@ -736,7 +736,8 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0.466, x2:1, y2:0.483, st
                   </property>
                   <property name="styleSheet">
                    <string notr="true">background-color: rgb(255, 255, 255);
-border: 3px solid black
+border: 2px solid black;
+border-radius: 3px;
 </string>
                   </property>
                   <property name="text">
@@ -790,7 +791,9 @@ border: 3px solid black
                 <item>
                  <widget class="QLabel" name="lbBoard2">
                   <property name="styleSheet">
-                   <string notr="true">border: 3px solid black;</string>
+                   <string notr="true">background-color: rgb(255, 255, 255);
+border: 2px solid black;
+border-radius: 3px;</string>
                   </property>
                   <property name="text">
                    <string/>
@@ -843,7 +846,9 @@ border: 3px solid black
                 <item>
                  <widget class="QLabel" name="lbBoard3">
                   <property name="styleSheet">
-                   <string notr="true">border: 3px solid black;</string>
+                   <string notr="true">background-color: rgb(255, 255, 255);
+border: 2px solid black;
+border-radius: 3px;</string>
                   </property>
                   <property name="text">
                    <string/>
@@ -940,7 +945,9 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0.466, x2:1, y2:0.483, st
                 <item>
                  <widget class="QLabel" name="lbBoard4">
                   <property name="styleSheet">
-                   <string notr="true">border: 3px solid black;</string>
+                   <string notr="true">background-color: rgb(255, 255, 255);
+border: 2px solid black;
+border-radius: 3px;</string>
                   </property>
                   <property name="text">
                    <string/>
@@ -993,7 +1000,9 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0.466, x2:1, y2:0.483, st
                 <item>
                  <widget class="QLabel" name="lbBoard5">
                   <property name="styleSheet">
-                   <string notr="true">border: 3px solid black;</string>
+                   <string notr="true">background-color: rgb(255, 255, 255);
+border: 2px solid black;
+border-radius: 3px;</string>
                   </property>
                   <property name="text">
                    <string/>
@@ -1053,7 +1062,8 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0.466, x2:1, y2:0.483, st
             </property>
             <property name="styleSheet">
              <string notr="true">background-color: rgb(255, 255, 255);
-border: 3px solid black;</string>
+border: 2px solid black;
+border-radius: 3px;</string>
             </property>
             <property name="text">
              <string/>
@@ -1076,7 +1086,8 @@ border: 3px solid black;</string>
             </property>
             <property name="styleSheet">
              <string notr="true">background-color: rgb(255, 255, 255);
-border: 3px solid black;</string>
+border: 2px solid black;
+border-radius: 3px;</string>
             </property>
             <property name="text">
              <string/>
@@ -1192,19 +1203,19 @@ border-radius: 5px;
             </property>
             <property name="styleSheet">
              <string notr="true">QPushButton {
-border: 3px solid black;
+border: 2px solid black;
 background-color: rgb(89, 255, 28);
 border-radius: 5px;
 }
 
 QPushButton:hover {
-border: 2px solid black;
+border: 1px solid black;
 background-color: rgb(89, 255, 28);
 border-radius: 7px;
 }
 
 QPushButton:clicked {
-border: 2px solid black;
+border: 1px solid black;
 background-color: rgb(13, 173, 26);
 border-radius: 5px;
 }
